# hyperplonk

./: .gitignore  CNAME  Cargo.toml  LICENSE  README.md  crates.js  flake.nix  help.html  search-index.js  settings.html  source-files.js  src-files.js  typos.toml
arithmetic/: Cargo.toml  all.html  enum.ArithErrors.html  fn.bit_decompose.html  fn.build_eq_x_r.html  fn.build_eq_x_r_vec.html  fn.build_l.html  fn.eq_eval.html  fn.evaluate_no_par.html  fn.evaluate_opt.html  fn.fix_first_variable.html  fn.fix_last_variables.html  fn.fix_last_variables_no_par.html  fn.fix_variables.html  fn.gen_eval_point.html  fn.get_batched_nv.html  fn.get_index.html  fn.get_uni_domain.html  fn.identity_permutation.html  fn.identity_permutation_mle.html  fn.identity_permutation_mles.html  fn.merge_polynomials.html  fn.random_mle_list.html  fn.random_permutation.html  fn.random_permutation_mle.html  fn.random_permutation_mles.html  fn.random_zero_mle_list.html  index.html  sidebar-items.js  struct.DenseMultilinearExtension.html  struct.VPAuxInfo.html  struct.VirtualPolynomial.html
arithmetic/benches/: bench.rs
arithmetic/errors/: enum.ArithErrors.html
arithmetic/multilinear_polynomial/: fn.evaluate_no_par.html  fn.evaluate_opt.html  fn.fix_first_variable.html  fn.fix_last_variables.html  fn.fix_last_variables_no_par.html  fn.fix_variables.html  fn.identity_permutation.html  fn.identity_permutation_mle.html  fn.identity_permutation_mles.html  fn.merge_polynomials.html  fn.random_mle_list.html  fn.random_permutation.html  fn.random_permutation_mle.html  fn.random_permutation_mles.html  fn.random_zero_mle_list.html  struct.DenseMultilinearExtension.html
arithmetic/src/: errors.rs  lib.rs  multilinear_polynomial.rs  prelude.rs  univariate_polynomial.rs  util.rs  virtual_polynomial.rs
arithmetic/univariate_polynomial/: fn.build_l.html  fn.get_uni_domain.html
arithmetic/util/: fn.bit_decompose.html  fn.gen_eval_point.html  fn.get_batched_nv.html  fn.get_index.html
arithmetic/virtual_polynomial/: fn.build_eq_x_r.html  fn.build_eq_x_r_vec.html  fn.eq_eval.html  struct.VPAuxInfo.html  struct.VirtualPolynomial.html
doc/: Makefile  (+6 more)
hyperplonk/: Cargo.toml  all.html  index.html  macro.build_mle!.html  macro.build_mle.html  sidebar-items.js  trait.HyperPlonkSNARK.html
hyperplonk/benches/: bench.rs
hyperplonk/custom_gate/: struct.CustomizedGates.html
hyperplonk/errors/: enum.HyperPlonkErrors.html
hyperplonk/mock/: struct.MockCircuit.html
hyperplonk/prelude/: enum.HyperPlonkErrors.html  index.html  sidebar-items.js  struct.CustomizedGates.html  struct.MockCircuit.html  struct.SelectorColumn.html  struct.WitnessColumn.html
hyperplonk/selectors/: struct.SelectorColumn.html
hyperplonk/src/: batching.rs  constants.rs  custom_gate.rs  errors.rs  lib.rs  mock.rs  pcs_aggregator.rs  prelude.rs  prover.rs  selectors.rs  snark.rs  structs.rs  utils.rs  witness.rs
hyperplonk/src/subroutine/: mod.rs  perm_check.rs  zero_check.rs
hyperplonk/witness/: struct.WitnessColumn.html
pcs/: Cargo.toml  all.html  enum.PCSErrors.html  index.html  readme.md  sidebar-items.js  struct.KZGMultilinearPC.html  struct.ProverParam.html  struct.UniversalParams.html  struct.VerifierParam.html  trait.MultilinearCommitmentScheme.html  trait.PolynomialCommitmentScheme.html  trait.StructuredReferenceString.html
pcs/benches/: bench.rs
pcs/errors/: enum.PCSError.html  enum.PCSErrors.html
pcs/multilinear_kzg/: struct.BatchProof.html  struct.KZGMultilinearPCS.html  struct.MultilinearKzgBatchProof.html  struct.MultilinearKzgPCS.html  struct.MultilinearKzgProof.html  struct.Proof.html
pcs/multilinear_kzg/srs/: struct.MultilinearProverParam.html  struct.MultilinearUniversalParams.html  struct.MultilinearVerifierParam.html
pcs/multilinear_kzg/util/: fn.compute_qx_degree.html  fn.get_batched_nv.html  fn.merge_polynomials.html
pcs/param/: struct.ProverParam.html  struct.UniversalParams.html  struct.VerifierParam.html
pcs/prelude/: enum.PCSError.html  enum.PCSErrors.html  fn.compute_qx_degree.html  fn.get_batched_nv.html  fn.merge_polynomials.html  index.html  sidebar-items.js  struct.BatchProof.html  struct.Commitment.html  struct.KZGMultilinearPCS.html  struct.MultilinearKzgBatchProof.html  struct.MultilinearKzgPCS.html  struct.MultilinearKzgProof.html  struct.MultilinearProverParam.html  struct.MultilinearUniversalParams.html  struct.MultilinearVerifierParam.html  struct.Proof.html  struct.UnivariateKzgPCS.html  struct.UnivariateKzgProof.html  struct.UnivariateProverParam.html  struct.UnivariateUniversalParams.html  struct.UnivariateVerifierParam.html  type.UnivariateKzgBatchProof.html
pcs/src/: commit.rs  errors.rs  lib.rs  param.rs  prelude.rs  structs.rs  util.rs
pcs/src/multilinear_kzg/: batching.rs  mod.rs  srs.rs  util.rs
pcs/src/univariate_kzg/: mod.rs  srs.rs
pcs/structs/: struct.Commitment.html
pcs/univariate_kzg/: struct.UnivariateKzgPCS.html  struct.UnivariateKzgProof.html  type.UnivariateKzgBatchProof.html
pcs/univariate_kzg/srs/: struct.UnivariateProverParam.html  struct.UnivariateUniversalParams.html  struct.UnivariateVerifierParam.html
poly-iop/: Cargo.toml  readme.md
poly-iop/benches/: bench.rs
poly-iop/src/: errors.rs  lib.rs  poly_list.rs  prelude.rs  structs.rs  transcript.rs  utils.rs  virtual_poly.rs
poly-iop/src/hyperplonk/: mod.rs
poly-iop/src/perm_check/: mod copy.rs  mod.rs  util.rs
poly-iop/src/prod_check/: mod.rs  util.rs
subroutines/: Cargo.toml  all.html  index.html  macro.to_bytes.html  sidebar-items.js
subroutines/benches/: iop_bench.rs  pcs_bench.rs
subroutines/pcs/: index.html  sidebar-items.js  trait.PolynomialCommitmentScheme.html  trait.StructuredReferenceString.html
subroutines/poly_iop/: index.html  sidebar-items.js  struct.PolyIOP.html
subroutines/src/: lib.rs
transcript/: Cargo.toml  all.html  enum.TranscriptError.html  enum.TranscriptErrors.html  index.html  macro.to_bytes.html  sidebar-items.js  struct.IOPTranscript.html
transcript/errors/: enum.TranscriptError.html  enum.TranscriptErrors.html
transcript/src/: errors.rs  lib.rs
(+277 files in other folders)
