[package]
name = "arithmetic"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = { version = "0.4.0", default-features = false, features = [ "curve" ] }
ark-ff = { version = "^0.4.0", default-features = false }
ark-poly = { version = "^0.4.0", default-features = false }
ark-serialize =  { version = "^0.5.0", default-features = false }
ark-std = { version = "^0.4.0", default-features = false }
displaydoc = { version = "0.2.3", default-features = false }
rand_chacha = { version = "0.3.0", default-features = false }
rayon = { version = "1.5.2", default-features = false, optional = true }

[dev-dependencies]
ark-ec = { version = "^0.4.0", default-features = false }
criterion = "0.5.1"

[features]
# default = [ "parallel", "print-trace" ]
default = ["parallel"]
parallel = [ 
    "rayon",
    "ark-std/parallel", 
    "ark-ff/parallel",  
    "ark-poly/parallel" 
    ]
print-trace = [ 
    "ark-std/print-trace" 
    ] 

[[bench]]
name = "mle_eval"
path = "benches/bench.rs"
harness = false
