[package]
name = "pcs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ark-std = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false, features = [ "derive" ] }
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-poly = {version = "^0.3.0", default-features = false }
ark-sponge = {version = "^0.3.0", default-features = false}
ark-bls12-381 = { version = "0.3.0", default-features = false, features = [ "curve" ] }

displaydoc = { version = "0.2.3", default-features = false }

poly-iop = { path = "../poly-iop" }


# Benchmarks
[[bench]]
name = "pcs-benches"
path = "benches/bench.rs"
harness = false

[features]
# default = [ "parallel", "print-trace" ]
default = [ "parallel" ]
parallel = [ 
    "ark-std/parallel", 
    "ark-ff/parallel",  
    "ark-poly/parallel", 
    "ark-ec/parallel",
    "poly-iop/parallel"
    ]
print-trace = [ 
    "ark-std/print-trace",
    "poly-iop/print-trace"
    ] 