[package]
name = "pcs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ark-std = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false, features = [ "derive" ] }
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-poly = {version = "^0.3.0", default-features = false }
ark-sponge = {version = "^0.3.0", default-features = false}
ark-bls12-381 = { version = "0.3.0", default-features = false, features = [ "curve" ] }

displaydoc = { version = "0.2.3", default-features = false }
derivative = { version = "2", features = ["use_core"] }

arithmetic = { path = "../arithmetic" }
transcript = { path = "../transcript" }
util = { path = "../util" }

rayon = { version = "1.5.2", default-features = false, optional = true }
itertools = { version = "0.10.4", optional = true }

# Benchmarks
[[bench]]
name = "pcs-benches"
path = "benches/bench.rs"
harness = false

[features]
# default = [ "parallel", "print-trace" ]
default = [ "parallel",]
extensive_sanity_checks = [ ]
parallel = [ 
    "rayon",
    "itertools",
    "ark-std/parallel", 
    "ark-ff/parallel",  
    "ark-poly/parallel", 
    "ark-ec/parallel",
    "util/parallel",
    "arithmetic/parallel", 
    ]
print-trace = [ 
    "ark-std/print-trace",
    "arithmetic/print-trace",
    ] 