[package]
name = "poly-iop"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcs = { path = "../pcs" }

ark-ff = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-serialize =  { version = "^0.3.0", default-features = false }
ark-bls12-381 = { version = "0.3.0", default-features = false, features = [ "curve" ] }
ark-ec = { version = "^0.3.0", default-features = false }

rand_chacha = { version = "0.3.0", default-features = false }
displaydoc = { version = "0.2.3", default-features = false }
rayon = { version = "1.5.2", default-features = false, optional = true }

transcript = { path = "../transcript" }
arithmetic = { path = "../arithmetic" }

[dev-dependencies]
ark-ec = { version = "^0.3.0", default-features = false }

# Benchmarks
[[bench]]
name = "poly-iop-benches"
path = "benches/bench.rs"
harness = false

[features]
# default = [ "parallel", "print-trace" ]
default = [ "parallel" ]
parallel = [ 
    "rayon",
    "arithmetic/parallel",
    "ark-std/parallel", 
    "ark-ff/parallel",  
    "pcs/parallel",
    ]
print-trace = [ 
    "arithmetic/print-trace",
    "ark-std/print-trace" 
    ] 